force-app/main/default/objects/Speaker__c/Speaker__c.object-meta.xml
<CustomObject>
    <description>Informações gerais sobre o palestrante responsável pela apresentação ou evento.</description>
    <label>Palestrante</label>
    <nameField>
        <label>Nome do Palestrante</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Palestrantes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>