force-app/main/default/objects/Speaker__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Endereço de e-mail do palestrante para contato.</description>
    <inlineHelpText>Informe um e-mail válido e ativo, que será utilizado para comunicações oficiais.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>