force-app/main/default/objects/Speaker__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Número de telefone do palestrante.</description>
    <inlineHelpText>Inclua o número com código do país e DDD, se aplicável.</inlineHelpText>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>