force-app/main/default/objects/Speaker__c/fields/Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_URL__c</fullName>
    <description>Armazena o link direto para a foto de perfil do palestrante, hospedada externamente. Essa URL é consumida pelo componente LWC &apos;speakerTile&apos; para renderizar o avatar na página de detalhes.</description>
    <inlineHelpText>Insira o link completo (iniciando com https://) para a foto do palestrante. Dica: Encontre a imagem desejada na internet, clique com o botão direito e selecione &quot;Copiar endereço da imagem&quot;.</inlineHelpText>
    <label>Perfil URL</label>
    <type>Url</type>
</CustomField>