force-app/main/default/objects/Speaker__c/fields/Specialisation__c.field-meta.xml
<CustomField>
    <fullName>Specialisation__c</fullName>
    <description>Área de especialização ou conhecimento do palestrante.</description>
    <inlineHelpText>Descreva brevemente a principal área de atuação ou expertise (ex: Marketing Digital, Inteligência Artificial, Finanças, etc).</inlineHelpText>
    <label>Especialidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>